k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ritma-system
  labels:
    name: ritma-system
