k8s/orchestrator.selinux.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-orchestrator
  namespace: ritma-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar-orchestrator
  template:
    metadata:
      labels:
        app: bar-orchestrator
    spec:
      securityContext:
        seLinuxOptions:
          level: "s0"
      containers:
      - name: orchestrator
        image: ritma/bar_orchestrator:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          seccompProfile:
            type: RuntimeDefault
          appArmorProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: data
          mountPath: /var/lib/ritma
        - name: locks
          mountPath: /run/ritma/locks
      volumes:
      - name: data
        hostPath:
          path: /var/lib/ritma
          type: DirectoryOrCreate
      - name: locks
        hostPath:
          path: /run/ritma/locks
          type: DirectoryOrCreate
